# Data-Science-Agentic-Notebook

./: .env  README.md  notebook.db  pyproject.toml  requirements.txt  run.py
src/agent/: graph.py  nodes.py  state.py
src/core/: config.py  database.py  executor.py  shared.py
src/ui/: app.py
tests/: test_agent.py  test_shared_exec.py
